--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
@@ -14,7 +11,9 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.4",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "sass": "^1.54.9",
     "web-vitals": "^2.1.4"
   },
@@ -23,10 +22,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "run-server": "json-server --watch meals.json --port 4000"
+    "run-server": "json-server --watch meals.json --port 4000",
+    "coverage": "npm test -- --watchAll=false --coverage"
   },
   "eslintConfig": {
-  "extends": [
+    "extends": [
       "react-app",
       "react-app/jest"
     ]
@@ -42,5 +42,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^8.17.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.0.3",
+    "redux-mock-store": "^1.5.4"
   }
 }
